# test-app

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go  main2.go  main2.go.tmp  sample.go
.github/actions/build_image/: action.yaml
.github/actions/push_manifest/: action.yaml
.github/workflows/: build_and_deploy.yaml  build_image.yaml  dagger_build.yaml  dependency.yaml  go_test.yaml  update_dbdiagram.yaml
docker/: Dockerfile
go/users/db/dbdiagram/: dbdiagram.txt
go/users/db/migrations/: 000001_create_users_table.up.sql
image_build/v1/: action.yaml
sample/overlays/staging/: kustomization.yaml
tmp/: sample2.go
