load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "go-image",
    base = "@golang_latest//image",
    files = [
        ":cmd/test.yaml",
    ],
    workdir = "/workspace",
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":go-image",
    registry = "index.docker.io",
    repository = "kawa1/github-actions-test",
    tag = "latest",
)
